Add favicon. Add preview for all posts. Use preview instead of excerpt.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,6 +9,8 @@
   <link href='{{base}}/assets/main.css' rel='stylesheet'>
   <link href='{{base}}/assets/800.css' rel='stylesheet'>
 
+  <link rel="shortcut icon" href="{{base}}/assets/favicon.ico" type="image/x-icon">
+
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Quicksand" />
