--- a/_includes/header_bar.html
+++ b/_includes/header_bar.html
@@ -31,22 +31,22 @@
                 </div>
             </div>
             <div class="menu_header_bar">
-                <a href="index.html">
+                <a href="{{base}}/index.html">
                     <div class="menu_header_text_wrapper">
                         <div class="menu_header_text">Comic</div>
                     </div>
                 </a>
-                <a href="blog.html">
+                <a href="{{base}}/blog.html">
                     <div class="menu_header_text_wrapper">
                         <div class="menu_header_text">Blog</div>
                     </div>
                 </a>
-                <a href="characters.html">
+                <a href="{{base}}/characters.html">
                     <div class="menu_header_text_wrapper">
                         <div class="menu_header_text">Characters</div>
                     </div>
                 </a>
-                <a href="about.html">
+                <a href="{{base}}/about.html">
                     <div class="menu_header_text_wrapper">
                         <div class="menu_header_text">About</div>
                     </div>
