--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -29,7 +29,7 @@
                             </p>
                         <a class="post-link" href="{{base}}{{ post.url }}">
                             <div class="excerpt_container">
-                                {{ post.excerpt | remove: '
+                                {{ post.preview | remove: '
                                 <p>' | remove: '</p>' | replace: 'BASE', base }}
 
                             </div>
