Layout blog content page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,8 +12,10 @@
 
     <div class="header_box">
         {% include header_bar.html %}
+        <a href="{{base}}/index.html">
         <div class="logo">
         </div>
+      </a>
         <div id="social_container">
             <a href="https://www.instagram.com/sealiconvalley/">
                 <div class="social_img">
@@ -49,7 +51,7 @@
     <div class="header_box_small">
         {% include header_bar.html %}
     </div>
-  
+
 </body>
 
 </html>
