--- a/_includes/header_bar.html
+++ b/_includes/header_bar.html
@@ -11,8 +11,10 @@
     <div class="header_bar_container">
         <div class="header_bar">
             <div class="logo_header_bar">
+              <a href="{{base}}/index.html">
                 <div class="header_logo">
                 </div>
+              </a>
             </div>
             <div id="social_container_small">
                 <a href="https://www.instagram.com/sealiconvalley/">
