--- a/assets/main.css
+++ b/assets/main.css
@@ -131,12 +131,6 @@ body {
     padding: 2px;
     margin: 0 0 30px;
     width: 100%;
-    /*
-    box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    box-shadow: 2px 2px 2px 2px #ccc;
-		*/
     /* animation: item_animation 10s ease-in-out infinite; */
 }
 
@@ -347,16 +341,154 @@ body {
 }
 
 .post_container {
-    width: 800px;
-    text-align: center;
+    width: 100%;
+		max-width: 900px;
     margin: 20px auto;
     margin-top: 20px;
     margin-bottom: 20px;
     display: block;
+		color: #5b5b5b;
+		text-align: center;
+}
+
+.post_container .post_info {
+	display:block;
+	text-align: left;
+}
+
+.post_info .post_title {
+	display: inline-block;
+	text-align: left;
+	font-weight: bold;
+	font-size: 22px;
+	letter-spacing: 1px;
+	text-transform: uppercase;
+}
+
+.post_info .post_date {
+	display: inline-block;
+	text-align: left;
+	font-size: 16px;
+	margin-left: 10px;
+	color: #8e8e8e;
+}
+
+.post_container .comic {
+	width: 100%;
+	display: block;
+	max-width: 900px;
 }
 
 .post_container img {
-    width: 30px;
+	max-width: 100%;
+	max-height: 100%;
+	margin-top: 20px;
+	margin-bottom: 20px;
+}
+
+.post_container p {
+	margin-top: 10px;
+	margin-bottom: 10px;
+	text-align: left;
+}
+
+.post_container .share {
+	margin-top: 20px;
+	text-align: center;
+}
+
+.post_container .share_this {
+color: #8e8e8e;
+font-size: 16px;
+
+}
+
+.post_container .post_share_social_container {
+	margin-top: 15px;
+}
+
+.post_share_social_container .social_img {
+	background-image: url("grey_circle.png");
+}
+
+.post_container .prev_next_container {
+	width: 100%;
+	height: 40px;
+	margin-top: 30px;
+}
+
+.post_container .prev_post {
+	width: 48%;
+	height: 100%;
+	float:left;
+	background-color: #41b0f7;
+	border: 1px solid #41b0f7;
+	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	border-radius: 4px;
+	text-transform: uppercase;
+	font-size: 14px;
+	color:white;
+	letter-spacing: 1px;
+	vertical-align: middle;
+	line-height: 40px;
+}
+
+.post_container .next_post {
+	width: 48%;
+	height: 100%;
+	float:right;
+	background-color: #41b0f7;
+	border: 1px solid #41b0f7;
+	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	border-radius: 4px;
+	text-transform: uppercase;
+	font-size: 14px;
+	color:white;
+	letter-spacing: 1px;
+	vertical-align: middle;
+	line-height: 40px;
+}
+
+.post_container .related_posts {
+	margin-top: 40px;
+}
+
+.post_container .related_posts_prompt {
+	font-size: 15px;
+	text-transform: uppercase;
+	font-weight: bold;
+	text-align: left;
+}
+
+.post_container .masonry {
+	margin-left: 0;
+	margin-right: 0;
+	margin-top: 20px;
+}
+
+.post_container .related_post_excerpt_container img{
+	width: 280px;
+	height: 280px;
+	object-fit: cover;
+	margin-bottom: 0px;
+	margin-top: 0px;
+	border: 1px solid #fff;
+	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	border-radius: 4px;
+}
+
+.post_container a {
+	text-decoration: none;
+	color: #5b5b5b;
+}
+
+.post_container .related_post_title {
+	font-size: 15px;
+	text-transform: uppercase;
+	margin-top: 15px;
 }
 
 #characters {
