--- a/_layouts/characters0.html
+++ b/_layouts/characters0.html
@@ -4,28 +4,167 @@
 <html lang="{{ page.lang | default: site.lang | default: " en " }}">
 
 <head>
-  <!--<script src="{{base}}/assets/carousel.js"></script>-->
-  {% include head.html %}
+    <!--<script src="{{base}}/assets/carousel.js"></script>-->
+    {% include head.html %}
+    <script>
+    </script>
 </head>
 
 
 <body>
     {% include header.html %}
-<div class="home_content" id="characters">
-      <div class="ccontainer">
-        <div class="carousel" id="ccarousel">
-          <div class="citem a"></div>
-          <div class="citem b"></div>
-          <div class="citem c"></div>
-          <div class="citem d"></div>
-          <div class="citem e"></div>
+
+    <div class="fish_container2">
+
+      <div class="fish_item">
+        <div class="fish_icon">
+          <img src="{{base}}/assets/octopus2.png" />
+        </div>
+        <div class="fish_content">
+
+          <div class="fish_name">
+            Octopus
+          </div>
+          <div class="fish_title">
+            (Designer)
+          </div>
+          <div class="fish_desc">
+          Lorem ipsum dolor sit amet, oporteat invenire ut quo. Sed simul tation explicari ne. Viderer disputationi ad cum. Intellegebat signiferumque quo ei. Mel ignota salutandi ut, cu nec atqui nulla.
+          <br/><br/>
+          Cibo simul mucius his an. Ius civibus inimicus te, democritum suscipiantur delicatissimi qui ex, nam id sale commune lobortis. Postulant vituperata ea cum, iracundia comprehensam te est. Melius aperiri incorrupte vel no. Detraxit quaestio delicatissimi no pri.
+          </div>
+        </div>
+
+      </div>
+
+
+
+        <div class="fish_item">
+          <div class="fish_icon">
+            <img src="{{base}}/assets/dolphin2.png" />
+          </div>
+          <div class="fish_content">
+
+            <div class="fish_name">
+              Dolphin
+            </div>
+            <div class="fish_title">
+              (Engineer)
+            </div>
+            <div class="fish_desc">
+            Lorem ipsum dolor sit amet, oporteat invenire ut quo. Sed simul tation explicari ne. Viderer disputationi ad cum. Intellegebat signiferumque quo ei. Mel ignota salutandi ut, cu nec atqui nulla.
+            <br/><br/>
+            Cibo simul mucius his an. Ius civibus inimicus te, democritum suscipiantur delicatissimi qui ex, nam id sale commune lobortis. Postulant vituperata ea cum, iracundia comprehensam te est. Melius aperiri incorrupte vel no. Detraxit quaestio delicatissimi no pri.
+            </div>
+          </div>
+
+        </div>
+
+
+
+          <div class="fish_item">
+            <div class="fish_icon">
+              <img src="{{base}}/assets/shark2.png" />
+            </div>
+            <div class="fish_content">
+
+              <div class="fish_name">
+                Shark
+              </div>
+              <div class="fish_title">
+                (Investor)
+              </div>
+              <div class="fish_desc">
+              Lorem ipsum dolor sit amet, oporteat invenire ut quo. Sed simul tation explicari ne. Viderer disputationi ad cum. Intellegebat signiferumque quo ei. Mel ignota salutandi ut, cu nec atqui nulla.
+              <br/><br/>
+              Cibo simul mucius his an. Ius civibus inimicus te, democritum suscipiantur delicatissimi qui ex, nam id sale commune lobortis. Postulant vituperata ea cum, iracundia comprehensam te est. Melius aperiri incorrupte vel no. Detraxit quaestio delicatissimi no pri.
+              </div>
+            </div>
+
+          </div>
+
+
+
+            <div class="fish_item">
+              <div class="fish_icon">
+                <img src="{{base}}/assets/narwhal2.png" />
+              </div>
+              <div class="fish_content">
+
+                <div class="fish_name">
+                  Narwhal
+                </div>
+                <div class="fish_title">
+                  (Startup Founder)
+                </div>
+                <div class="fish_desc">
+                Lorem ipsum dolor sit amet, oporteat invenire ut quo. Sed simul tation explicari ne. Viderer disputationi ad cum. Intellegebat signiferumque quo ei. Mel ignota salutandi ut, cu nec atqui nulla.
+                <br/><br/>
+                Cibo simul mucius his an. Ius civibus inimicus te, democritum suscipiantur delicatissimi qui ex, nam id sale commune lobortis. Postulant vituperata ea cum, iracundia comprehensam te est. Melius aperiri incorrupte vel no. Detraxit quaestio delicatissimi no pri.
+                </div>
+              </div>
+
+            </div>
+
+
+
+              <div class="fish_item">
+                <div class="fish_icon">
+                  <img src="{{base}}/assets/bubble2.png" />
+                </div>
+                <div class="fish_content">
+
+                  <div class="fish_name">
+                    Bubble
+                  </div>
+                  <div class="fish_title">
+                    (Intern)
+                  </div>
+                  <div class="fish_desc">
+                  Lorem ipsum dolor sit amet, oporteat invenire ut quo. Sed simul tation explicari ne. Viderer disputationi ad cum. Intellegebat signiferumque quo ei. Mel ignota salutandi ut, cu nec atqui nulla.
+                  <br/><br/>
+                  Cibo simul mucius his an. Ius civibus inimicus te, democritum suscipiantur delicatissimi qui ex, nam id sale commune lobortis. Postulant vituperata ea cum, iracundia comprehensam te est. Melius aperiri incorrupte vel no. Detraxit quaestio delicatissimi no pri.
+                  </div>
+                </div>
+
+              </div>
+    </div>
+    <!--
+
+    <div class="fish_container">
+        <div class="fish_img" id="octopus">
+          <img src="{{base}}/assets/octopus2.png" />
+        </div>
+        <div class="fish_img" id="dolphin">
+          <img src="{{base}}/assets/dolphin2.png" />
+        </div>
+        <div class="fish_img" id="narwhal">
+          <img src="{{base}}/assets/narwhal2.png" />
+        </div>
+        <div class="fish_img" id="shark">
+          <img src="{{base}}/assets/shark2.png" />
+        </div>
+        <div class="fish_img" id="bubble">
+          <img src="{{base}}/assets/bubble2.png" />
+        </div>
+    </div>
+    <div class="fish_text_container">
+      <div class="fish_info">
+        <div class="fish_name">
+          Narwhal
+        </div>
+        <div class="fish_title">
+          (Startup Founder)
+        </div>
+        <div class="fish_desc">
+        Lorem ipsum dolor sit amet, oporteat invenire ut quo. Sed simul tation explicari ne. Viderer disputationi ad cum. Intellegebat signiferumque quo ei. Mel ignota salutandi ut, cu nec atqui nulla.
+<br/><br/>
+        Cibo simul mucius his an. Ius civibus inimicus te, democritum suscipiantur delicatissimi qui ex, nam id sale commune lobortis. Postulant vituperata ea cum, iracundia comprehensam te est. Melius aperiri incorrupte vel no. Detraxit quaestio delicatissimi no pri.
         </div>
       </div>
-      <div class="navigation_holder">
-        <div class="prev"></div>
-        <div class="next"></div>
-      </div>
-</div>
+    </div>
+  -->
     {% include footer.html %}
 </body>
+
 </html>
