--- a/assets/main.css
+++ b/assets/main.css
@@ -59,9 +59,18 @@ a:active {
     text-decoration: none;
 }
 
+html {
+   margin: 0px;
+   height: 100%;
+   width: 100%;
+}
+
 body {
     font-family: 'Open Sans', sans-serif;
     color: #414141;
+    min-height:100%;
+    height: 100%;
+    margin: 0;
 }
 
 #banner_container {
@@ -617,4 +626,237 @@ font-size: 16px;
     float: left;
     background: red;
     z-index: 1000;
+
 }
+
+.about_container {
+	width: 100%;
+	max-width: 900px;
+	height: 340px;
+	display: block;
+	margin: 0 auto;
+ box-sizing:border-box;  /** add this **/
+ -moz-box-sizing:border-box; /** add this **/
+ -webkit-box-sizing:border-box; /** add this **/
+ -ms-box-sizing:border-box; /** add this **/
+ margin-bottom: 30px;
+}
+.about_pic {
+	width: 45%;
+	height: 340px;
+	float:left;
+	background-image: url("about_temp_img.png");
+	background-repeat: no-repeat;
+	background-size: contain;
+	padding: 10px;
+ box-sizing:border-box;  /** add this **/
+ -moz-box-sizing:border-box; /** add this **/
+ -webkit-box-sizing:border-box; /** add this **/
+ -ms-box-sizing:border-box; /** add this **/
+ background-position: center;
+}
+
+.about_text {
+	position:relative;
+	float: right;
+	width: 45%;
+	display:block;
+	padding: 10px;
+	color: #636263;
+ box-sizing:border-box;  /** add this **/
+ -moz-box-sizing:border-box; /** add this **/
+ -webkit-box-sizing:border-box; /** add this **/
+ -ms-box-sizing:border-box; /** add this **/
+}
+
+
+@media screen and (max-width: 800px)   {
+    .about_pic{
+        width:100%;
+        float:none;
+    }
+		.about_text{
+        width:100%;
+        float:none;
+    }
+
+		.about_container{
+			height: 100%;
+
+		}
+		.footer
+		{
+		}
+	}
+
+
+.about_title {
+	font-weight: bold;
+	font-size: 30px;
+}
+
+.about_content {
+	margin-top: 20px;
+	line-height: 22px;
+	font-size: 16px;
+}
+
+.about_email {
+	margin-top: 20px;
+	font-size: 14px;
+	font-weight: bold;
+	letter-spacing: 2px;
+}
+
+.fish_container {
+  display: block;
+  margin: 0 auto;
+  text-align: center;
+  margin-bottom: 40px;
+}
+
+.fish_img {
+  max-height: 275px;
+  min-width: 100px;
+  display:inline-block;
+  background-repeat: no-repeat;
+  background-size: contain;;
+  object-fit: cover;
+  margin-left: 10px;
+  margin-right:10px;
+  opacity: 0.5;
+}
+
+.fish_img:hover {
+  transform: scale(1.2);
+  transition: transform;
+  transition-duration: 1000;
+  opacity: 1.0;
+}
+
+#dolphin {
+  margin-right: 20px;
+}
+
+#narwhal {
+  margin-right: 30px;
+}
+
+.fish_text_container {
+  width: 100%;
+  max-width: 940px;
+  margin: 0 auto;
+  color: #5b5b5b;
+  padding-left: 20px;
+  padding-right: 20px;
+ box-sizing:border-box;  /** add this **/
+ -moz-box-sizing:border-box; /** add this **/
+ -webkit-box-sizing:border-box; /** add this **/
+ -ms-box-sizing:border-box; /** add this **/
+}
+
+.fish_name {
+  display: inline-block;
+  font-size: 26px;
+  text-transform: uppercase;
+  color: #5b5b5b;
+  font-weight: bold;
+  letter-spacing: 2px;
+}
+
+.fish_title {
+  display: inline-block;
+  font-size: 20px;
+  margin-left: 15px;
+  color: #8e8e8e;
+}
+
+.fish_desc {
+  margin-top: 20px;
+  display: block;
+  width: 100%;
+  letter-spacing: 1px;
+  margin-bottom: 50px;
+}
+
+.fish_container2 {
+    width: 100%;
+    max-width: 940px;
+    margin: 0 auto;
+    color: #5b5b5b;
+}
+
+.fish_item {
+  width:100%;
+  height: 366px;
+	border: 3px solid #e8ecef;
+  -webkit-border-radius: 80px;
+  -moz-border-radius: 80px;
+  border-radius: 80px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  //box-shadow: 5px 5px 5px #e8ecef;
+  overflow: hidden;
+}
+
+.fish_icon {
+  width: 37%;
+  height:100%;
+  display: inline-block;
+  float: left;
+  object-fit: cover;
+  //margin-right:60px;
+  text-align: center;
+  //background-color: #e8ecef;
+  background-color: #e8f2fb;
+  padding-left: 20px;
+  padding-right: 20px;
+ box-sizing:border-box;  /** add this **/
+ -moz-box-sizing:border-box; /** add this **/
+ -webkit-box-sizing:border-box; /** add this **/
+ -ms-box-sizing:border-box; /** add this **/
+}
+
+.fish_content {
+  display: inline-block;
+  width: 63%;
+  float: right:
+  vertical-align: middle;
+  max-height: 100%;
+  height:100%;
+  padding-top: 90px;
+//  background-color: #e8f2fb;
+  padding-left: 20px;
+  padding-right: 20px;
+ box-sizing:border-box;  /** add this **/
+ -moz-box-sizing:border-box; /** add this **/
+ -webkit-box-sizing:border-box; /** add this **/
+ -ms-box-sizing:border-box; /** add this **/
+
+}
+/*
+#octopus {
+  background-image: url("octopus2.png");
+    width: 229px;
+}
+
+#dolphin {
+  background-image: url("dolphin2.png");
+    width: 229px;
+}
+
+#narwhal {
+  background-image: url("narwhal2.png");
+    width: 229px;
+}
+
+#shark {
+  background-image: url("shark2.png");
+    width: 229px;
+}
+
+#bubble {
+  background-image: url("bubble2.png");
+    width: 229px;
+}
+*/
