--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,4 +13,37 @@
   <div class="footer_copyright">
 &copy; 2017 Sealicon Valley Inc. All Rights Reserved.
   </div>
+
+</div>
+
+<div class="bottom_tabs">
+  <a href="{{base}}/index.html">
+      <div class="bottom_tab_wrapper">
+
+        <div class="bottom_tab_img">
+        </div>
+          <div class="menu_header_text">Comic</div>
+      </div>
+  </a>
+  <a href="{{base}}/blog.html">
+      <div class="bottom_tab_wrapper">
+              <div class="bottom_tab_img">
+              </div>
+                <div  class="menu_header_text">Blog</div>
+      </div>
+  </a>
+  <a href="{{base}}/characters.html">
+      <div class="bottom_tab_wrapper">
+              <div class="bottom_tab_img">
+              </div>
+          <div class="menu_header_text">Characters</div>
+      </div>
+  </a>
+  <a href="{{base}}/about.html">
+      <div class="bottom_tab_wrapper">
+              <div class="bottom_tab_img">
+              </div>
+          <div class="menu_header_text">About</div>
+      </div>
+  </a>
 </div>
