--- a/assets/main.css
+++ b/assets/main.css
@@ -237,8 +237,9 @@ body {
   text-align: center;
 	position:fixed;;
 	bottom:0;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.8);
   display: none;
+	border-top: 1px solid #ededed;
 }
 
 
@@ -246,6 +247,9 @@ body {
 @media only screen and (max-width: 900px) {
 .bottom_tabs {
   display: block;
+}
+body {
+  margin-bottom: 89px;
 }
 .footer {
   display: none;
