--- a/assets/main.css
+++ b/assets/main.css
@@ -237,7 +237,7 @@ body {
   text-align: center;
 	position:fixed;;
 	bottom:0;
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: white;
   display: none;
 	border-top: 1px solid #ededed;
 }
