Fix footer subscribe layout

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,49 +1,51 @@
 <div class="footer">
-  <div class="footer_subscribe">
     <div class="subscribe_container">
-    <input type="text" class="subscribe_email" />
-    <div class="subscribe_button">Subscribe</div>
-  </div>
-  </div>
+        <input type="text" class="subscribe_email" />
+        <div class="subscribe_button">
+            <span style="vertical-align:middle;display:table-cell;">
+              Subscribe
+            </span>
+        </div>
+    </div>
 
-  <div class="footer_email">
-  SEALICONVALLEY@GMAIL.COM
-  </div>
+    <div class="footer_email">
+        SEALICONVALLEY@GMAIL.COM
+    </div>
 
-  <div class="footer_copyright">
-&copy; 2017 Sealicon Valley Inc. All Rights Reserved.
-  </div>
+    <div class="footer_copyright">
+        &copy; 2017 Sealicon Valley Inc. All Rights Reserved.
+    </div>
 
 </div>
 
 <div class="bottom_tabs">
-  <a href="{{base}}/index.html">
-      <div class="bottom_tab_wrapper">
+    <a href="{{base}}/index.html">
+        <div class="bottom_tab_wrapper">
 
-        <div class="bottom_tab_img">
+            <div class="bottom_tab_img">
+            </div>
+            <div class="menu_header_text">Comic</div>
         </div>
-          <div class="menu_header_text">Comic</div>
-      </div>
-  </a>
-  <a href="{{base}}/blog.html">
-      <div class="bottom_tab_wrapper">
-              <div class="bottom_tab_img">
-              </div>
-                <div  class="menu_header_text">Blog</div>
-      </div>
-  </a>
-  <a href="{{base}}/characters.html">
-      <div class="bottom_tab_wrapper">
-              <div class="bottom_tab_img">
-              </div>
-          <div class="menu_header_text">Characters</div>
-      </div>
-  </a>
-  <a href="{{base}}/about.html">
-      <div class="bottom_tab_wrapper">
-              <div class="bottom_tab_img">
-              </div>
-          <div class="menu_header_text">About</div>
-      </div>
-  </a>
+    </a>
+    <a href="{{base}}/blog.html">
+        <div class="bottom_tab_wrapper">
+            <div class="bottom_tab_img">
+            </div>
+            <div class="menu_header_text">Blog</div>
+        </div>
+    </a>
+    <a href="{{base}}/characters.html">
+        <div class="bottom_tab_wrapper">
+            <div class="bottom_tab_img">
+            </div>
+            <div class="menu_header_text">Characters</div>
+        </div>
+    </a>
+    <a href="{{base}}/about.html">
+        <div class="bottom_tab_wrapper">
+            <div class="bottom_tab_img">
+            </div>
+            <div class="menu_header_text">About</div>
+        </div>
+    </a>
 </div>
