--- a/assets/main.css
+++ b/assets/main.css
@@ -60,15 +60,15 @@ a:active {
 }
 
 html {
-   margin: 0px;
-   height: 100%;
-   width: 100%;
+    margin: 0px;
+    height: 100%;
+    width: 100%;
 }
 
 body {
     font-family: 'Open Sans', sans-serif;
     color: #414141;
-    min-height:100%;
+    min-height: 100%;
     height: 100%;
     margin: 0;
 }
@@ -223,80 +223,79 @@ body {
     color: #a4aaaf;
 }
 
-.footer_subscribe {
-	margin-top: 5px;
-	display: block;
-	height: 35px;
-	width: 100%;
-}
-
 .bottom_tabs {
-  width: 100%;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  text-align: center;
-	position:fixed;;
-	bottom:0;
-  background-color: white;
-  display: none;
-	border-top: 1px solid #ededed;
+    width: 100%;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    text-align: center;
+    position: fixed;
+    ;
+    bottom: 0;
+    background-color: white;
+    display: none;
+    border-top: 1px solid #ededed;
 }
-
-
 
 @media only screen and (max-width: 900px) {
-.bottom_tabs {
-  display: block;
-}
-body {
-  margin-bottom: 89px;
-}
-.footer {
-  display: none;
-}
-#social_container_small {
-  display:none;
-}
+    .bottom_tabs {
+        display: block;
+    }
+    body {
+        margin-bottom: 89px;
+    }
+    .footer {
+        display: none;
+    }
+    #social_container_small {
+        display: none;
+    }
 }
 
 .bottom_tab_wrapper {
-  width: 24%;
-  display: inline-block;
-  text-align: center;
-  position: relative;
-
+    width: 24%;
+    display: inline-block;
+    text-align: center;
+    position: relative;
 }
 
 .bottom_tab_img {
-      width: 25px;
-      height: 25px;
-      display: inline-block;
-      object-fit: contain;
-      background-image: url("grey_circle.png");
-      background-size: contain;
-      background-repeat: no-repeat;
-      z-index: 1000;
+    width: 25px;
+    height: 25px;
+    display: inline-block;
+    object-fit: contain;
+    background-image: url("grey_circle.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    z-index: 1000;
 }
 
 .bottom_tab_wrapper .menu_header_text {
-  margin-top: 10px;
-  color: black;
-  text-align: center;
-  display: block;
-  font-size: 12px;
+    margin-top: 10px;
+    color: black;
+    text-align: center;
+    display: block;
+    font-size: 12px;
 }
 
-
+.footer_subscribe {
+    margin-top: 5px;
+    display: block;
+    height: 35px;
+    width: 100%;
+}
 
 .subscribe_container {
-	width: 100%;
-	max-width: 500px; margin: 0 auto;
-	height:100%;
+    width: 100%;
+    max-width: 500px;
+    margin: 0 auto;
+    height: 50px;
+    display: block;
 }
+
 .subscribe_email {
     width: 56%;
-    padding-left:3px;
-		height:100%;
+    padding-left: 3px;
+    height: 35px;
     position: relative;
     left: 0;
     font-size: 16px;
@@ -304,29 +303,35 @@ body {
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
     border-radius: 4px;
-		display: inline-block;
-		float:left;
-		color:#41b0f7;
+    display: inline-block;
+    float: left;
+    color: #41b0f7;
+    top: 50%;
+    transform: translateY(-50%);
+    text-align: center;
 }
+
 .subscribe_button {
-	width: 40%;
-	height:100%;
-	line-height: 40px;
-  text-align: center;
-	font-size: 16px;
-	text-transform: uppercase;
-	font-weight: bold;
-	border: 1px solid #41b0f7;
-	-webkit-border-radius: 4px;
-	-moz-border-radius: 4px;
-	border-radius: 4px;
-	display: inline-block;
-	text-align: center;
-	position: relative;
-	padding:0;
-	float:right;
-	background-color: #41b0f7;
-	letter-spacing: 1px;
+    width: 40%;
+    height: 39px;
+    text-align: center;
+    font-size: 16px;
+    text-transform: uppercase;
+    font-weight: bold;
+    border: 1px solid #41b0f7;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    display: inline-block;
+    text-align: center;
+    position: relative;
+    padding: 0;
+    float: right;
+    background-color: #41b0f7;
+    letter-spacing: 1px;
+    top: 50%;
+    transform: translateY(-50%);
+    display: table;
 }
 
 .post_info {
@@ -378,216 +383,222 @@ body {
 
 .post_container {
     width: 100%;
-		max-width: 900px;
+    max-width: 900px;
     margin: 20px auto;
     margin-top: 20px;
     margin-bottom: 20px;
     display: block;
-		color: #5b5b5b;
-		text-align: center;
-		padding-left:20px;
-		padding-right:20px;
-	 box-sizing:border-box;  /** add this **/
-	 -moz-box-sizing:border-box; /** add this **/
-	 -webkit-box-sizing:border-box; /** add this **/
-	 -ms-box-sizing:border-box; /** add this **/
+    color: #5b5b5b;
+    text-align: center;
+    padding-left: 20px;
+    padding-right: 20px;
+    box-sizing: border-box;
+    /** add this **/
+    -moz-box-sizing: border-box;
+    /** add this **/
+    -webkit-box-sizing: border-box;
+    /** add this **/
+    -ms-box-sizing: border-box;
+    /** add this **/
 }
 
 .post_container .post_info {
-	display:block;
-	text-align: left;
+    display: block;
+    text-align: left;
 }
 
 .post_info .post_title {
-	display: inline-block;
-	text-align: left;
-	font-weight: bold;
-	font-size: 22px;
-	letter-spacing: 1px;
-	text-transform: uppercase;
+    display: inline-block;
+    text-align: left;
+    font-weight: bold;
+    font-size: 22px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
 }
 
 .post_info .post_date {
-	display: inline-block;
-	text-align: left;
-	font-size: 16px;
-	margin-left: 10px;
-	color: #8e8e8e;
+    display: inline-block;
+    text-align: left;
+    font-size: 16px;
+    margin-left: 10px;
+    color: #8e8e8e;
 }
 
 .post_container .comic {
-	width: 100%;
-	display: block;
-	max-width: 900px;
+    width: 100%;
+    display: block;
+    max-width: 900px;
 }
 
 .post_container img {
-	max-width: 100%;
-	max-height: 100%;
-	margin-top: 20px;
-	margin-bottom: 20px;
+    max-width: 100%;
+    max-height: 100%;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .post_container p {
-	margin-top: 20px;
-	margin-bottom: 20px;
-	text-align: left;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    text-align: left;
 }
 
 .post_container .share {
-	margin-top: 25px;
-	text-align: center;
+    margin-top: 25px;
+    text-align: center;
 }
 
 .post_container .share_this {
-color: #8e8e8e;
-font-size: 16px;
+    color: #8e8e8e;
+    font-size: 16px;
 }
 
 .post_container .post_share_social_container {
-	margin-top: 20px;
+    margin-top: 20px;
 }
 
 .post_share_social_container .social_img {
-	background-image: url("grey_circle.png");
+    background-image: url("grey_circle.png");
 }
 
 .post_container .prev_next_container {
-	width: 100%;
-	height: 40px;
-	margin-top: 30px;
+    width: 100%;
+    height: 40px;
+    margin-top: 30px;
 }
 
 .post_container .prev_post {
-	width: 48%;
-	height: 100%;
-	float:left;
-	background-color: #41b0f7;
-	border: 1px solid #41b0f7;
-	-webkit-border-radius: 4px;
-	-moz-border-radius: 4px;
-	border-radius: 4px;
-	text-transform: uppercase;
-	font-size: 14px;
-	color:white;
-	letter-spacing: 1px;
-	vertical-align: middle;
-	line-height: 40px;
+    width: 48%;
+    height: 100%;
+    float: left;
+    background-color: #41b0f7;
+    border: 1px solid #41b0f7;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    text-transform: uppercase;
+    font-size: 14px;
+    color: white;
+    letter-spacing: 1px;
+    vertical-align: middle;
+    line-height: 40px;
 }
 
 .post_container .next_post {
-	width: 48%;
-	height: 100%;
-	float:right;
-	background-color: #41b0f7;
-	border: 1px solid #41b0f7;
-	-webkit-border-radius: 4px;
-	-moz-border-radius: 4px;
-	border-radius: 4px;
-	text-transform: uppercase;
-	font-size: 14px;
-	color:white;
-	letter-spacing: 1px;
-	vertical-align: middle;
-	line-height: 40px;
+    width: 48%;
+    height: 100%;
+    float: right;
+    background-color: #41b0f7;
+    border: 1px solid #41b0f7;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    text-transform: uppercase;
+    font-size: 14px;
+    color: white;
+    letter-spacing: 1px;
+    vertical-align: middle;
+    line-height: 40px;
 }
 
 .post_container .related_posts {
-	margin-top: 40px;
+    margin-top: 40px;
 }
 
 .post_container .related_posts_prompt {
-	font-size: 15px;
-	text-transform: uppercase;
-	font-weight: bold;
-	text-align: left;
+    font-size: 15px;
+    text-transform: uppercase;
+    font-weight: bold;
+    text-align: left;
 }
 
 .post_container .masonry {
-	margin-left: 0;
-	margin-right: 0;
-	margin-top: 20px;
+    margin-left: 0;
+    margin-right: 0;
+    margin-top: 20px;
 }
 
-
-
 #blog_masonry {
-		-moz-column-count: 1;
-		-webkit-column-count: 1;
-		column-count: 1;
-		text-align: center;
-		column-gap: 0;
+    -moz-column-count: 1;
+    -webkit-column-count: 1;
+    column-count: 1;
+    text-align: center;
+    column-gap: 0;
 }
 
 #blog_item {
-	max-width: 800px;
-	border: 3px solid #e8ecef;
-	-webkit-border-radius: 4px;
-	-moz-border-radius: 4px;
-	border-radius: 4px;
-	padding: 0;
-	color: #666666;
+    max-width: 800px;
+    border: 3px solid #e8ecef;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    padding: 0;
+    color: #666666;
 }
 
 #blog_item .blog_preview img {
-	width: 100%;
-	height: 450px;
-	object-fit: cover;
+    width: 100%;
+    height: 450px;
+    object-fit: cover;
 }
 
 #blog_item .blog_preview_info {
-	width: 100%;
-	background-color: #f9f9f9;
-	padding: 30px;
-	text-align: left;
- box-sizing:border-box;  /** add this **/
- -moz-box-sizing:border-box; /** add this **/
- -webkit-box-sizing:border-box; /** add this **/
- -ms-box-sizing:border-box; /** add this **/
+    width: 100%;
+    background-color: #f9f9f9;
+    padding: 30px;
+    text-align: left;
+    box-sizing: border-box;
+    /** add this **/
+    -moz-box-sizing: border-box;
+    /** add this **/
+    -webkit-box-sizing: border-box;
+    /** add this **/
+    -ms-box-sizing: border-box;
+    /** add this **/
 }
 
 #blog_item .blog_preview_title {
-	font-size: 20px;
-	text-transform: uppercase;
-	font-weight: bold;
-	color: #666666;
-	letter-spacing: 1px;
+    font-size: 20px;
+    text-transform: uppercase;
+    font-weight: bold;
+    color: #666666;
+    letter-spacing: 1px;
 }
 
 #blog_item .blog_preview_excerpt {
-	color: #848484;
-	margin-top: 10px;
+    color: #848484;
+    margin-top: 10px;
 }
 
-#blog_item .blog_preview_excerpt p{
-	overflow: hidden;
-   text-overflow: ellipsis;
-   display: -webkit-box;
-   -webkit-box-orient: vertical;
-   -webkit-line-clamp:1;
+#blog_item .blog_preview_excerpt p {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 1;
 }
 
-.post_container .related_post_excerpt_container img{
-	width: 280px;
-	height: 280px;
-	object-fit: cover;
-	margin-bottom: 0px;
-	margin-top: 0px;
-	border: 1px solid #fff;
-	-webkit-border-radius: 4px;
-	-moz-border-radius: 4px;
-	border-radius: 4px;
+.post_container .related_post_excerpt_container img {
+    width: 280px;
+    height: 280px;
+    object-fit: cover;
+    margin-bottom: 0px;
+    margin-top: 0px;
+    border: 1px solid #fff;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
 }
 
 .post_container a {
-	text-decoration: none;
-	color: #5b5b5b;
+    text-decoration: none;
+    color: #5b5b5b;
 }
 
 .post_container .related_post_title {
-	font-size: 15px;
-	text-transform: uppercase;
-	margin-top: 15px;
+    font-size: 15px;
+    text-transform: uppercase;
+    margin-top: 15px;
 }
 
 #characters {
@@ -685,157 +696,168 @@ font-size: 16px;
     float: left;
     background: red;
     z-index: 1000;
-
 }
 
 .about_container {
-	width: 100%;
-	max-width: 900px;
-	height: 340px;
-	display: block;
-	margin: 0 auto;
- box-sizing:border-box;  /** add this **/
- -moz-box-sizing:border-box; /** add this **/
- -webkit-box-sizing:border-box; /** add this **/
- -ms-box-sizing:border-box; /** add this **/
- margin-bottom: 30px;
+    width: 100%;
+    max-width: 900px;
+    height: 340px;
+    display: block;
+    margin: 0 auto;
+    box-sizing: border-box;
+    /** add this **/
+    -moz-box-sizing: border-box;
+    /** add this **/
+    -webkit-box-sizing: border-box;
+    /** add this **/
+    -ms-box-sizing: border-box;
+    /** add this **/
+    margin-bottom: 30px;
 }
+
 .about_pic {
-	width: 45%;
-	height: 340px;
-	float:left;
-	background-image: url("about_temp_img.png");
-	background-repeat: no-repeat;
-	background-size: contain;
-	padding: 10px;
- box-sizing:border-box;  /** add this **/
- -moz-box-sizing:border-box; /** add this **/
- -webkit-box-sizing:border-box; /** add this **/
- -ms-box-sizing:border-box; /** add this **/
- background-position: center;
+    width: 45%;
+    height: 340px;
+    float: left;
+    background-image: url("about_temp_img.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    padding: 10px;
+    box-sizing: border-box;
+    /** add this **/
+    -moz-box-sizing: border-box;
+    /** add this **/
+    -webkit-box-sizing: border-box;
+    /** add this **/
+    -ms-box-sizing: border-box;
+    /** add this **/
+    background-position: center;
 }
 
 .about_text {
-	position:relative;
-	float: right;
-	width: 45%;
-	display:block;
-	padding: 10px;
-	color: #636263;
- box-sizing:border-box;  /** add this **/
- -moz-box-sizing:border-box; /** add this **/
- -webkit-box-sizing:border-box; /** add this **/
- -ms-box-sizing:border-box; /** add this **/
+    position: relative;
+    float: right;
+    width: 45%;
+    display: block;
+    padding: 10px;
+    color: #636263;
+    box-sizing: border-box;
+    /** add this **/
+    -moz-box-sizing: border-box;
+    /** add this **/
+    -webkit-box-sizing: border-box;
+    /** add this **/
+    -ms-box-sizing: border-box;
+    /** add this **/
 }
 
-
-@media screen and (max-width: 800px)   {
-    .about_pic{
-        width:100%;
-        float:none;
+@media screen and (max-width: 800px) {
+    .about_pic {
+        width: 100%;
+        float: none;
     }
-		.about_text{
-        width:100%;
-        float:none;
+    .about_text {
+        width: 100%;
+        float: none;
     }
-
-		.about_container{
-			height: 100%;
-
-		}
-		.footer
-		{
-		}
-	}
-
+    .about_container {
+        height: 100%;
+    }
+    .footer {}
+}
 
 .about_title {
-	font-weight: bold;
-	font-size: 30px;
+    font-weight: bold;
+    font-size: 30px;
 }
 
 .about_content {
-	margin-top: 20px;
-	line-height: 22px;
-	font-size: 16px;
+    margin-top: 20px;
+    line-height: 22px;
+    font-size: 16px;
 }
 
 .about_email {
-	margin-top: 20px;
-	font-size: 14px;
-	font-weight: bold;
-	letter-spacing: 2px;
+    margin-top: 20px;
+    font-size: 14px;
+    font-weight: bold;
+    letter-spacing: 2px;
 }
 
 .fish_container {
-  display: block;
-  margin: 0 auto;
-  text-align: center;
-  margin-bottom: 40px;
+    display: block;
+    margin: 0 auto;
+    text-align: center;
+    margin-bottom: 40px;
 }
 
 .fish_img {
-  max-height: 275px;
-  min-width: 100px;
-  display:inline-block;
-  background-repeat: no-repeat;
-  background-size: contain;;
-  object-fit: cover;
-  margin-left: 10px;
-  margin-right:10px;
-  opacity: 0.5;
+    max-height: 275px;
+    min-width: 100px;
+    display: inline-block;
+    background-repeat: no-repeat;
+    background-size: contain;
+    ;
+    object-fit: cover;
+    margin-left: 10px;
+    margin-right: 10px;
+    opacity: 0.5;
 }
 
 .fish_img:hover {
-  transform: scale(1.2);
-  transition: transform;
-  transition-duration: 1000;
-  opacity: 1.0;
+    transform: scale(1.2);
+    transition: transform;
+    transition-duration: 1000;
+    opacity: 1.0;
 }
 
 #dolphin {
-  margin-right: 20px;
+    margin-right: 20px;
 }
 
 #narwhal {
-  margin-right: 30px;
+    margin-right: 30px;
 }
 
 .fish_text_container {
-  width: 100%;
-  max-width: 940px;
-  margin: 0 auto;
-  color: #5b5b5b;
-  padding-left: 20px;
-  padding-right: 20px;
- box-sizing:border-box;  /** add this **/
- -moz-box-sizing:border-box; /** add this **/
- -webkit-box-sizing:border-box; /** add this **/
- -ms-box-sizing:border-box; /** add this **/
+    width: 100%;
+    max-width: 940px;
+    margin: 0 auto;
+    color: #5b5b5b;
+    padding-left: 20px;
+    padding-right: 20px;
+    box-sizing: border-box;
+    /** add this **/
+    -moz-box-sizing: border-box;
+    /** add this **/
+    -webkit-box-sizing: border-box;
+    /** add this **/
+    -ms-box-sizing: border-box;
+    /** add this **/
 }
 
 .fish_name {
-  display: inline-block;
-  font-size: 26px;
-  text-transform: uppercase;
-  color: #5b5b5b;
-  font-weight: bold;
-  letter-spacing: 2px;
+    display: inline-block;
+    font-size: 26px;
+    text-transform: uppercase;
+    color: #5b5b5b;
+    font-weight: bold;
+    letter-spacing: 2px;
 }
 
 .fish_title {
-  display: inline-block;
-  font-size: 20px;
-  margin-left: 15px;
-  color: #8e8e8e;
+    display: inline-block;
+    font-size: 20px;
+    margin-left: 15px;
+    color: #8e8e8e;
 }
 
 .fish_desc {
-  margin-top: 20px;
-  display: block;
-  width: 100%;
-  letter-spacing: 1px;
-  margin-bottom: 50px;
+    margin-top: 20px;
+    display: block;
+    width: 100%;
+    letter-spacing: 1px;
+    margin-bottom: 50px;
 }
 
 .fish_container2 {
@@ -846,53 +868,61 @@ font-size: 16px;
 }
 
 .fish_item {
-  width:100%;
-  height: 366px;
-	border: 3px solid #e8ecef;
-  -webkit-border-radius: 80px;
-  -moz-border-radius: 80px;
-  border-radius: 80px;
-  margin-top: 20px;
-  margin-bottom: 20px;
-  //box-shadow: 5px 5px 5px #e8ecef;
-  overflow: hidden;
+    width: 100%;
+    height: 366px;
+    border: 3px solid #e8ecef;
+    -webkit-border-radius: 80px;
+    -moz-border-radius: 80px;
+    border-radius: 80px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    //box-shadow: 5px 5px 5px #e8ecef;
+    overflow: hidden;
 }
 
 .fish_icon {
-  width: 37%;
-  height:100%;
-  display: inline-block;
-  float: left;
-  object-fit: cover;
-  //margin-right:60px;
-  text-align: center;
-  //background-color: #e8ecef;
-  background-color: #e8f2fb;
-  padding-left: 20px;
-  padding-right: 20px;
- box-sizing:border-box;  /** add this **/
- -moz-box-sizing:border-box; /** add this **/
- -webkit-box-sizing:border-box; /** add this **/
- -ms-box-sizing:border-box; /** add this **/
+    width: 37%;
+    height: 100%;
+    display: inline-block;
+    float: left;
+    object-fit: cover;
+    //margin-right:60px;
+    text-align: center;
+    //background-color: #e8ecef;
+    background-color: #e8f2fb;
+    padding-left: 20px;
+    padding-right: 20px;
+    box-sizing: border-box;
+    /** add this **/
+    -moz-box-sizing: border-box;
+    /** add this **/
+    -webkit-box-sizing: border-box;
+    /** add this **/
+    -ms-box-sizing: border-box;
+    /** add this **/
 }
 
 .fish_content {
-  display: inline-block;
-  width: 63%;
-  float: right:
-  vertical-align: middle;
-  max-height: 100%;
-  height:100%;
-  padding-top: 90px;
-//  background-color: #e8f2fb;
-  padding-left: 20px;
-  padding-right: 20px;
- box-sizing:border-box;  /** add this **/
- -moz-box-sizing:border-box; /** add this **/
- -webkit-box-sizing:border-box; /** add this **/
- -ms-box-sizing:border-box; /** add this **/
-
+    display: inline-block;
+    width: 63%;
+    float: right: vertical-align: middle;
+    max-height: 100%;
+    height: 100%;
+    padding-top: 90px;
+    //  background-color: #e8f2fb;
+    padding-left: 20px;
+    padding-right: 20px;
+    box-sizing: border-box;
+    /** add this **/
+    -moz-box-sizing: border-box;
+    /** add this **/
+    -webkit-box-sizing: border-box;
+    /** add this **/
+    -ms-box-sizing: border-box;
+    /** add this **/
 }
+
+
 /*
 #octopus {
   background-image: url("octopus2.png");
