Fix homepage link

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,7 +12,7 @@
 
     <div class="header_box">
         {% include header_bar.html %}
-        <a href="{{base}}/index.html">
+        <a href="{{base}}">
         <div class="logo">
         </div>
       </a>
