--- a/_includes/header_bar.html
+++ b/_includes/header_bar.html
@@ -64,7 +64,7 @@
 
   <div id="mySidenav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-    <a href="{{base}}/index.html">Comic
+    <a href="{{base}}">Comic
     </a>
     <a href="{{base}}/blog.html">Blog
     </a>
@@ -77,7 +77,7 @@
     <div class="header_bar_container">
         <div class="header_bar">
             <div class="logo_header_bar">
-              <a href="{{base}}/index.html">
+              <a href="{{base}}">
                 <div class="header_logo">
                 </div>
               </a>
@@ -99,7 +99,7 @@
                 </div>
             </div>
             <div class="menu_header_bar">
-                <a href="{{base}}/index.html">
+                <a href="{{base}}">
                     <div class="menu_header_text_wrapper">
                         <div class="menu_header_text">Comic</div>
                     </div>
