Fix footer link and email hint

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <div class="footer">
     <div class="subscribe_container">
-        <input type="text" class="subscribe_email" />
+        <input type="text" class="subscribe_email" placeholder="Email Address"/>
         <div class="subscribe_button">
             <span style="vertical-align:middle;display:table-cell;">
               Subscribe
@@ -19,7 +19,7 @@
 </div>
 
 <div class="bottom_tabs">
-    <a href="{{base}}/index.html">
+    <a href="{{base}}">
         <div class="bottom_tab_wrapper">
 
             <div class="bottom_tab_img">
