Add footer email hint. change background weight

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,16 @@
+{% include base.html %}
+<head>
+  <script>
+    function subscribe() {
+      var email = document.getElementById('input_email').value;
+      console.log(email);
+    }
+  </script>
+</head>
 <div class="footer">
     <div class="subscribe_container">
-        <input type="text" class="subscribe_email" placeholder="Email Address"/>
-        <div class="subscribe_button">
+        <input type="text" class="subscribe_email" id="input_email" placeholder="Email Address"/>
+        <div class="subscribe_button" onclick="subscribe()">
             <span style="vertical-align:middle;display:table-cell;">
               Subscribe
             </span>
