--- a/assets/800.css
+++ b/assets/800.css
@@ -12,6 +12,7 @@
     width: 100%;
     display: block;
     background-image: url("banner_small.png");
+     background-position: 70% center;
     background-size: cover;
     background-repeat: no-repeat;
     display: none;
@@ -67,6 +68,7 @@
     width: 100%;
     height: 100%;
     background-image: url("layer1.png");
+     background-position: 70% center;
     background-size: cover;
     background-repeat: no-repeat;
     position: absolute;
@@ -77,6 +79,7 @@
     width: 100%;
     height: 100%;
     background-image: url("layer2.png");
+     background-position: 70% center;
     background-size: cover;
     background-repeat: no-repeat;
     position: absolute;
@@ -87,6 +90,7 @@
     width: 100%;
     height: 100%;
     background-image: url("layer3.png");
+     background-position: 70% center;
     background-size: cover;
     background-repeat: no-repeat;
     position: absolute;
@@ -97,6 +101,7 @@
     width: 100%;
     height: 100%;
     background-image: url("layer4.png");
+     background-position: 70% center;
     background-size: cover;
     background-repeat: no-repeat;
     position: absolute;
@@ -107,6 +112,7 @@
     width: 100%;
     height: 100%;
     background-image: url("layer5.png");
+     background-position: 70% center; 
     background-size: cover;
     background-repeat: no-repeat;
     position: absolute;
