--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,10 +5,43 @@
 
 <head>
     {% include head.html %}
+
+    <meta property="og:url" content="{{ base }}{{ page.url }}" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="{{ page.title }}" />
+    <meta property="og:description" content="rawr awr wraw r" />
+    <meta property="og:image" content='{{ page.comic }}' />
+
+    <script>
+        var winWidth = 520;
+        var winHeight = 350;
+        var winTop = (screen.height / 2) - (winHeight / 2);
+        var winLeft = (screen.width / 2) - (winWidth / 2);
+
+        function sharePost(index) {
+            console.log("index: " + index);
+            switch (index) {
+                case 1:
+                    console.log("1111");
+                    window.open('http://www.facebook.com/sharer.php?s=100&p[title]=' + '{{ page.title }}' + '&p[summary]=' + 'rawr  raw ra r' + '&p[url]=' + '{{ base }}{{ page.url }}' + '&p[images][0]=' + '{{ page.comic }}', 'sharer', 'top=' +
+                        winTop + ',left=' + winLeft + ',toolbar=0,status=0,width=' + winWidth + ',height=' + winHeight);
+                    break;
+            }
+        }
+    </script>
 </head>
 
 <body>
-
+    <!--
+  <div id="fb-root"></div>
+  <script>(function(d, s, id) {
+    var js, fjs = d.getElementsByTagName(s)[0];
+    if (d.getElementById(id)) return;
+    js = d.createElement(s); js.id = id;
+    js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.8";
+    fjs.parentNode.insertBefore(js, fjs);
+  }(document, 'script', 'facebook-jssdk'));</script>
+-->
     {% include header.html %}
 
     <div class="post_container">
@@ -40,7 +73,7 @@
                     <div class="social_img">
                     </div>
                 </a>
-                <a href="https://www.facebook.com/sealiconvalley/">
+                <a href="javascript:void(0)" onclick="sharePost(1)">
                     <div class="social_img">
                     </div>
                 </a>
@@ -71,9 +104,15 @@
             </div>
         </div>
 
-        {% if page.related %}
-        {% assign maxRelated = 3 %}
-        {% assign maxRelatedCounter = 0 %}
+        <!-- Your share button code -->
+        <!--
+          <div class="fb-share-button"
+            data-href="http://www.sealiconvalley.com/test/comic/2017/02/04/test-post.html"
+            data-layout="button_count">
+          </div>
+        -->
+
+        {% if page.related %} {% assign maxRelated = 3 %} {% assign maxRelatedCounter = 0 %}
 
         <div class="related_posts">
             <div class="related_posts_prompt">
@@ -83,45 +122,38 @@
 
 
 
-                <div class="masonry">
-                    <ul class="post-list">
-                        {% for post in site.posts %}
-                        {% if page.related contains post.title %}
-                        <li>
-                            <div class="item">
-                                <a class="post-link" href="{{base}}{{ post.url }}">
-                                    <div class="related_post_excerpt_container">
-                                        {{ post.preview | remove: '
-                                        <p>' | remove: '</p>' | replace: 'BASE', base }}
+            <div class="masonry">
+                <ul class="post-list">
+                    {% for post in site.posts %} {% if page.related contains post.title %}
+                    <li>
+                        <div class="item">
+                            <a class="post-link" href="{{base}}{{ post.url }}">
+                                <div class="related_post_excerpt_container">
+                                    {{ post.preview | remove: '
+                                    <p>' | remove: '</p>' | replace: 'BASE', base }}
 
-                                    </div>
-                                    <div class="related_post_title">
-                                      {{ post.title }}
-                                    </div>
-                                </a>
-                            </div>
-                        </li>
-                        {% assign maxRelatedCounter = maxRelatedCounter | plus: 1 %}
-                              {% if maxRelatedCounter >= maxRelated %}
-                                {% break %}
-                              {% endif %}
-
-                        {%  endif %}
-                        {% endfor %}
-                    </ul>
-                </div>
+                                </div>
+                                <div class="related_post_title">
+                                    {{ post.title }}
+                                </div>
+                            </a>
+                        </div>
+                    </li>
+                    {% assign maxRelatedCounter = maxRelatedCounter | plus: 1 %} {% if maxRelatedCounter >= maxRelated %} {% break %} {% endif %} {% endif %} {% endfor %}
+                </ul>
+            </div>
 
 
             <div class="related_posts_container">
 
-                    {% for post in site.posts %} {% if page.related contains post.title %}
+                {% for post in site.posts %} {% if page.related contains post.title %}
 
-                    <!--<li><a href="{{ post.url }}">{{ post.title }}</a></li>-->
+                <!--<li><a href="{{ post.url }}">{{ post.title }}</a></li>-->
 
-                    <div class="related_post_preview">
+                <div class="related_post_preview">
 
-                    </div>
-                    {% endif %} {% endfor %}
+                </div>
+                {% endif %} {% endfor %}
 
             </div>
 
